# vmTUI

./: README.md  build.sh  pyproject.toml
vm_manager/: __init__.py  __main__.py  config.py
vm_manager/models/: __init__.py  hardware.py  snapshot.py  vm.py
vm_manager/services/: __init__.py  gpu.py  libvirt_service.py  network.py  osinfo.py  system.py  usb.py
vm_manager/ui/: __init__.py  app.py  theme.py
vm_manager/ui/screens/: __init__.py  create.py  detail.py  edit.py  main.py
vm_manager/ui/widgets/: __init__.py  checkpoint_dialog.py  dialog.py  form.py  list_view.py  search_select.py
vm_manager/utils/: __init__.py  formatting.py
